tetrate/tis0303/e2e/bad-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: bad-resource-1
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "example.com"
      tls:
        mode: SIMPLE
        credentialName: example-cert-1
